<resources>
    <string name="app_name">旋风帮</string>
    <string name="app_copyright">Copyright 2016 旋风帮</string>
    <string name="app_dev">TonyZ, BranZhang</string>

    <string name="navigation_drawer_open">打开导航</string>
    <string name="navigation_drawer_close">关闭导航</string>

    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="down_arrow">\u2193</string>
    <string name="left_arrow">\u2190</string>
    <string name="up_arrow">\u2191</string>
    <string name="right_arrow">\u2192</string>

    <string name="dialog_OK">确定</string>
    <string name="dialog_Cancel">取消</string>
    <string name="dialog_error_title">错误</string>
    <string name="dialog_message_title">提示</string>
    <string name="dialog_message_success">成功</string>
    <string name="dialog_text_wait">请等待</string>
    <string name="network_error">网络错误，请检查您的网络连接</string>

    <string name="title_activity_regist">注册账户</string>
    <string name="user_not_reg_yet">您尚未注册或登录,无法体验本程序功能</string>

    <string name="login_input_user_name">请输入用户名</string>
    <string name="login_input_user_password">请输入密码</string>
    <string name="login_button_login">登录</string>
    <string name="login_button_register">点击我注册账户</string>
    <string name="login_button_forget_password">忘记用户名或密码？</string>
    <string name="error_login_error">登陆失败，请确认网络和用户名密码后重试</string>

    <string name="forget_password_find_password_button">发送邮件</string>
    <string name="forget_password_send_email">已发送邮件</string>
    <string name="forget_password_email_error">邮件发送错误，请确认您的邮件地址</string>
    <string name="login_button_register_weibo">使用微博账户登陆</string>
    <string name="login_button_register_qq">使用QQ账户登陆</string>

    <string name="register_input_user_password_again">请再次输入密码</string>
    <string name="register_input_user_email">请输入E-mail地址</string>
    <string name="error_register_password_not_equals">两次输入密码不一致，请重新输入</string>
    <string name="error_register_password_null">密码不可为空</string>
    <string name="error_register_user_name_null">用户名不可空</string>
    <string name="error_register_email_address_null">E-mail地址不可空</string>
    <string name="error_register_user_name_repeat">用户名已被注册，请重新填写</string>
    <string name="error_register_email_repeat">邮箱已被注册，请更换邮箱</string>
    <string name="success_register_success">注册成功</string>

    <string name="database_name">database_log</string>

</resources>
