<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="org.gis4.xfb.hurricanehelp.fragments.main.IndexFragment">

    <com.amap.api.maps2d.MapView
        android:id="@+id/indexMap"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="right|bottom"
        android:paddingBottom="15dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            >

            <Button
                android:id="@+id/buttonL"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/left_arrow"
                android:background="@android:drawable/btn_default"
                android:textColor="#000000"/>

            <Button
                android:id="@+id/buttonU"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/buttonL"
                android:text="@string/up_arrow"
                android:background="@android:drawable/btn_default"
                android:textColor="#000000"/>

            <Button
                android:id="@+id/buttonD"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_below="@+id/buttonU"
                android:layout_toRightOf="@+id/buttonL"
                android:text="@string/down_arrow"
                android:background="@android:drawable/btn_default"
                android:textColor="#000000"/>

            <Button
                android:id="@+id/buttonR"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/buttonD"
                android:text="@string/right_arrow"
                android:background="@android:drawable/btn_default"
                android:textColor="#000000"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/buttonIn"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:text="@string/zoom_in"
                android:background="@android:drawable/btn_default"
                android:textColor="#000000"/>

            <Button
                android:id="@+id/buttonOut"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:text="@string/zoom_out"
                android:background="@android:drawable/btn_default"
                android:textColor="#000000"/>
        </LinearLayout>
    </LinearLayout>

    <!--搜索框-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout_search"
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <ImageView
                android:id="@+id/image_search_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="BACK"
                android:padding="12dp"
                android:src="@mipmap/ic_arrow_back"/>

            <EditText
                android:id="@+id/edit_text_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:gravity="center_vertical"
                android:hint="搜索"
                android:imeOptions="actionSearch"
                android:inputType="textCapWords"
                android:paddingLeft="12dp"
                android:paddingRight="8dp"
                android:singleLine="true"/>

            <ImageView
                android:id="@+id/clearSearch"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="Voice Cancel"
                android:padding="12dp"
                android:src="@mipmap/ic_keyboard_voice"/>
        </LinearLayout>

        <View
            android:id="@+id/line_divider"
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_below="@+id/linearLayout_search"
            android:background="#eee"/>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_divider"
            android:divider="#FEFEFE"/>
    </RelativeLayout>


</FrameLayout>
